@startuml

' Definizioni delle Classi
class Libro {
  -String isbn
  -String titolo
  -List<String> autore
  -int annoPub
  -int copieTotali
  -int copieDisponibili
  +getIsbn(): String
  +getCopieDisponibili(): int
  +incrementaDisponibilita(): void
  +decrementaDisponibilita(): void
  +setLibro(titolo, autore, anno): void
  +isDisponibile(): boolean
}

class Utente {
  -String matricola
  -String nome
  -String cognome
  -String email
  -List<Prestito> prestitiAttivi
  +getMatricola(): String
  +getNumeroPrestitiAttivi(): int
  +aggiungiPrestito(p: Prestito): void
  +rimuoviPrestito(p: Prestito): void
  +setUtente(nome, cognome, email): void
  +verificaLimite(max: int): boolean
  +getNumPrestiti(): int
}

class Prestito {
  -Libro libro
  -Utente utente
  -Date dataInizio
  -Date dataRegistrazionePrevista
  -Date dataRegistrazioneEffettiva
  -String idPrestito
  +setPrestito(): void
  +chiudiPrestito(dataEffettiva: Date): void
  +verificaRitardo(): boolean
  +getLibro(): Libro
  +getUtente(): Utente
}

class Catalogo {
  -Map<String, Libro> collezioneLibri
  +Catalogo(archivio: ArchivioDati)
  +aggiungiLibro(l: Libro): boolean
  +rimuoviLibro(isbn: String): boolean
  +modificaLibro(isbn: String, nuoviDati): Libro
  +getLibro(isbn: String): Libro
  +ricerca(query: String): List<Libro>
  +visualizzaOrdinata(): List<Libro>
}

class Anagrafica {
  -Map<String, Utente> registroUtenti
  +Anagrafica(archivio: ArchivioDati)
  +aggiungiUtente(u: Utente): void
  +rimuoviUtente(matr: String): boolean
  +modificaUtente(matr: String, nuoviDati): boolean
  +getUtente(matr: String): Utente
  +cercaUtente(query: String)
  +visualizzaOrdinata(): List<Utente>
}

class RegistroPrestiti {
  -List<Prestito> prestitiAttivi
  -int LIMITE_PRESTITI
  -Catalogo catalogo
  -AnagraficaUtenti anagrafica 'AnagraficaUtenti nel campo, Anagrafica nella relazione'
  +RegistroPrestiti(audit, catalogo, anagrafica)
  +registraPrestito(isbn, matr, dataPrev): Prestito
  +registraRestituzione(idPrestito): boolean
  +getPrestitiAttivi(): List<Prestito>
  +getPrestitiInRitardo(): List<Prestito>
}

class GUIController {
  -Catalogo catalogo
  -Anagrafica anagrafica
  -RegistroPrestiti registro
  +GUIController()
  +avviaSistema(): boolean
  +chiudiSistema(): boolean
  +gestisciPrestito(isbn, matr, dataPrev): boolean
  +gestisciRestituzione(idPrestito): boolean
  +ottieniReportPrestiti(): List<Prestito>
  +ottieniCatalogoOrdinato(): List<Libro>
}

class AuditTrail {
  -List<String> logRecords
  -ArchivioDati archivio
  +AuditTrail(archivio: ArchivioDati)
  +registraAzione(azione: String): void
  +caricaLog(): List<String>
  +salvaLog(): void
  +visualizzaLog(): List<String>
}

class ArchivioDati {
  -String pathDati
  -Logger logErrori
  +ArchivioDati(path: String)
  +salvaStato(dati: Object, nomeFile: String): boolean
  +caricaStato(nomeFile: String): Object
  +verificaEsistenzaFile(nomeFile: String): boolean
}

class ValidatoreDati {
  +validaISBN(isbn: String): boolean
  +validaMatricola(matr: String)
  +validaEmail(email: String)
  +validaAnnoPubblicazione(anno: int)
  +validaNomeCognome(str: String)
}

class GUIView {
  -GUIController sistema
  -MessaggiInterfaccia messaggi
  +GUI(sistema: GUIController)
  +avviaInterfaccia(): void
  +gestisciAggiuntaLibro(): void
  +gestisciRegistrazionePrestito(): void
  +mostraListaLibri(lista): void
  +mostraListaPrestiti(lista): void
  +mostraMessaggio(msg): void
}

class MessaggiInterfaccia {
  +String SUCCESSO_AGGIUNTA_LIBRO
  +String SUCCESSO_PRESTITO
  +String ERRORE_LIMITE_PRESTITO
  +String ERRORE_ISBN_DUPLICATO
  +String ERRORE_MATRICOLA_DUPLICATA
  +String ERRORE_ASSENZA_COPIE
  +String INPUT_EMAIL_NON_VALIDA
  +String INPUT_NOME_NON_VALIDO
  +String INPUT_COGNOOME_NON_VALIDO
  +String ANNO_NON_VALIDO
  +String ERRORE_MATRICOLA
  +String RITARDO_SEGNALATO
  +String AVVISO_CARICAMENTO_FALLITO
}

' Interfacce (come da tue specifiche)
interface IAuditTrail <<Interface>>
interface IArchivioDati <<Interface>>

' Correzione dei nomi delle classi che implementano le interfacce per evitare ambiguità
AuditTrail .up.|> IAuditTrail
ArchivioDati .up.|> IArchivioDati

' Correzione delle Relazioni
' Composizione
Catalogo "1" *-- "0..*" Libro : contiene
Anagrafica "1" *-- "0..*" Utente : contiene
RegistroPrestiti "1" *-- "0..*" Prestito : registra

' Associazione (Utente-Prestito)
Prestito "1" -- "1" Libro : riguarda
Utente "1" -- "0..3" Prestito : ha/effettua

' Aggregazione (GUIController usa i componenti principali)
GUIController o-- "1" Catalogo
GUIController o-- "1" Anagrafica
GUIController o-- "1" RegistroPrestiti

' Aggregazione (RegistroPrestiti usa i cataloghi)
RegistroPrestiti o-- "1" Catalogo
RegistroPrestiti o-- "1" Anagrafica

' Dipendenza / Uso
GUIController o-- "1" IArchivioDati
AuditTrail "1" -- "1" IArchivioDati
GUIView "1" -- "1" GUIController

' Dipendenza con il Validatore (Usa)
Catalogo "1" ..> "1" ValidatoreDati
Anagrafica "1" ..> "1" ValidatoreDati

' Associazione tra View e Messaggi
GUIView "1" -- "1" MessaggiInterfaccia

@enduml